Fix FindBugs issues